fix: index page dark mode & scroll button

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -4,7 +4,19 @@
 @import 'antd/dist/antd.css';
 @import './monokai-sublime.css';
 @import './Search.css';
+.index-container {
+  @apply bg-gray-700;
+  background-image: url(https://ftp.bmp.ovh/imgs/2021/04/04a93a5ed32d1758.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+@screen sm {
+  .index-container {
+    background-image: url(https://ftp.bmp.ovh/imgs/2021/04/a6aee4cfa257e370.webp);
+  }
+}
 .remark-code-title {
   @apply px-5 py-3 font-mono text-sm font-bold text-gray-200 bg-gray-700 rounded-t;
 }
@@ -94,6 +106,9 @@ html {
     @apply bg-opacity-80 dark:bg-opacity-50;
     backdrop-filter: saturate(180%) blur(5px);
   }
+  .dim {
+    filter: brightness(0.8);
+  }
 }
 
 /* Meta-search custom css */
@@ -108,21 +123,25 @@ html {
   color: white;
   border: none;
   border-radius: 0.4em;
+  @apply outline-none focus:outline-none;
 }
-.ant-input-affix-wrapper,
+.meta-search-bar .ant-input-affix-wrapper-focused {
+  @apply outline-none focus:outline-none;
+}
+.meta-search-bar .ant-input-affix-wrapper,
 .ant-btn {
-  background: rgba(255, 255, 255, 0.35);
-  backdrop-filter: blur(3px);
+  @apply bg-gray-100 dark:bg-gray-800 bg-opacity-40 dark:bg-opacity-50  focus:shadow-xl;
+  backdrop-filter: saturate(180%) blur(5px);
   height: 40px;
 }
 .meta-search-bar ::placeholder {
-  color: rgba(255, 255, 255, 0.75);
+  @apply opacity-70 text-gray-200 dark:text-gray-500;
 }
 .meta-search-bar .ant-btn {
-  background: #eee;
+  @apply bg-gray-100 dark:bg-gray-800 bg-opacity-80 dark:bg-opacity-50;
 }
 .meta-search-bar svg {
-  fill: gray;
+  @apply mb-1 fill-current text-gray-800 dark:text-gray-100;
 }
 #weather > div {
   display: block;
